--- a/BharathTest/BharathTest/Base.lproj/Main.storyboard
+++ b/BharathTest/BharathTest/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--SettingsVC-->
+        <!--Settings-->
         <scene sceneID="ZMR-Cr-fz4">
             <objects>
                 <viewController id="LLs-kp-6eX" customClass="SettingsVC" customModule="BharathTest" customModuleProvider="target" sceneMemberID="viewController">
@@ -39,12 +39,16 @@
                                     </stackView>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <gestureRecognizers/>
                                 <constraints>
                                     <constraint firstItem="WOH-zd-LTz" firstAttribute="centerX" secondItem="iE5-DE-kGh" secondAttribute="centerX" id="9DM-ZO-M9V"/>
                                     <constraint firstItem="WOH-zd-LTz" firstAttribute="centerY" secondItem="iE5-DE-kGh" secondAttribute="centerY" id="Bz0-1k-k5O"/>
                                     <constraint firstAttribute="height" constant="75" id="GLM-Xj-rEK"/>
                                     <constraint firstItem="WOH-zd-LTz" firstAttribute="leading" secondItem="iE5-DE-kGh" secondAttribute="leading" constant="16" id="dwE-Rc-DTh"/>
                                 </constraints>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="qqx-se-Ow2" appends="YES" id="xPU-0c-n7P"/>
+                                </connections>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hqq-N9-XZJ">
                                 <rect key="frame" x="160" y="263" width="94" height="30"/>
@@ -64,14 +68,54 @@
                             <constraint firstItem="jhM-Ss-tSe" firstAttribute="trailing" secondItem="iE5-DE-kGh" secondAttribute="trailing" id="gRA-O7-swl"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="7Mr-es-NZJ"/>
+                    <navigationItem key="navigationItem" title="Settings" id="7Mr-es-NZJ"/>
                     <connections>
                         <outlet property="unitsValue" destination="UEZ-zT-evw" id="rnz-Yt-AqW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lPJ-im-YUc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="qqx-se-Ow2">
+                    <connections>
+                        <segue destination="Tti-cI-owh" kind="show" identifier="SettingsToUnitList" id="ZCQ-u1-1HF"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="905.79710144927549" y="810.9375"/>
+        </scene>
+        <!--Unit Type-->
+        <scene sceneID="flM-sL-07W">
+            <objects>
+                <viewController id="Tti-cI-owh" customClass="UnitTypeListVC" customModule="BharathTest" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="j4o-rk-f9v">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ogw-AJ-Cfo">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="Tti-cI-owh" id="ik9-2B-nx7"/>
+                                    <outlet property="delegate" destination="Tti-cI-owh" id="3JJ-Ll-uX6"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Qab-aQ-La2"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Qab-aQ-La2" firstAttribute="trailing" secondItem="Ogw-AJ-Cfo" secondAttribute="trailing" id="CFK-7l-k8D"/>
+                            <constraint firstItem="Ogw-AJ-Cfo" firstAttribute="leading" secondItem="Qab-aQ-La2" secondAttribute="leading" id="GPU-Hh-mm3"/>
+                            <constraint firstItem="Qab-aQ-La2" firstAttribute="bottom" secondItem="Ogw-AJ-Cfo" secondAttribute="bottom" id="r7a-YN-3Gf"/>
+                            <constraint firstItem="Ogw-AJ-Cfo" firstAttribute="top" secondItem="Qab-aQ-La2" secondAttribute="top" id="vSM-fu-mqn"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Unit Type" id="SHT-Ax-h8r"/>
+                    <connections>
+                        <outlet property="tableVW" destination="Ogw-AJ-Cfo" id="Ya4-SW-U6e"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ycF-39-Nhp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1713" y="811"/>
         </scene>
         <!--Location-->
         <scene sceneID="tne-QT-ifu">
