--- a/BharathTest/BharathTest/Base.lproj/Main.storyboard
+++ b/BharathTest/BharathTest/Base.lproj/Main.storyboard
@@ -165,6 +165,11 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Location" id="YmT-Py-UAJ">
+                        <barButtonItem key="leftBarButtonItem" image="information" id="eTT-kS-DBX">
+                            <connections>
+                                <segue destination="Lat-MU-imx" kind="show" id="Ivf-iy-oOE"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" image="settings" id="ofh-nP-uyw">
                             <connections>
                                 <segue destination="LLs-kp-6eX" kind="show" identifier="HomeToSettings" id="5Fs-aU-xSc"/>
@@ -242,6 +247,41 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B7l-0s-7O2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-4.3478260869565224" y="65.625"/>
+        </scene>
+        <!--Help-->
+        <scene sceneID="DlX-7z-FVA">
+            <objects>
+                <viewController id="Lat-MU-imx" customClass="HelpVC" customModule="BharathTest" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="YCL-Ku-d3g">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pwB-Vp-Zfn">
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="OlT-kO-PvR"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="OlT-kO-PvR" firstAttribute="trailing" secondItem="pwB-Vp-Zfn" secondAttribute="trailing" id="4Yh-WQ-QUt"/>
+                            <constraint firstItem="pwB-Vp-Zfn" firstAttribute="top" secondItem="OlT-kO-PvR" secondAttribute="top" id="ETF-s7-NAt"/>
+                            <constraint firstItem="pwB-Vp-Zfn" firstAttribute="leading" secondItem="OlT-kO-PvR" secondAttribute="leading" id="OVQ-xD-z4n"/>
+                            <constraint firstAttribute="bottom" secondItem="pwB-Vp-Zfn" secondAttribute="bottom" id="oEq-nF-rG3"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Help" id="Seg-e6-ZcC"/>
+                    <connections>
+                        <outlet property="documentWebView" destination="pwB-Vp-Zfn" id="PFX-VD-3TA"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="U2J-EV-cMW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1738" y="-1276"/>
         </scene>
         <!--Today's Weather-->
         <scene sceneID="aFF-J8-4zq">
@@ -366,6 +406,7 @@
     </scenes>
     <resources>
         <image name="add" width="372" height="372"/>
+        <image name="information" width="18" height="18"/>
         <image name="settings" width="18" height="18"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
